cloud/k8s/backend/wetty/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetty
  labels:
    app: wetty
    component: deployment
spec:
  selector:
    matchLabels:
      app: wetty
  template:
    metadata:
      labels:
        app: wetty
        component: workload
    spec:
      volumes:
      - name: wetty-docker-persistent-storage
        persistentVolumeClaim:
          claimName: wetty-docker-pv-claim
      - name: wetty-store-persistent-storage
        persistentVolumeClaim:
          claimName: wetty-store-pv-claim
      containers:
      - image: ghcr.io/jobscale/wetty
        name: wetty
        securityContext:
          privileged: true
        volumeMounts:
        - name: wetty-docker-persistent-storage
          mountPath: /var/lib/docker
        - name: wetty-store-persistent-storage
          mountPath: /home/store
---
apiVersion: v1
kind: Service
metadata:
  name: wetty
  labels:
    app: wetty
    component: service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: wetty
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wetty
  labels:
    app: wetty
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "wetty.jsx.jp"
  - "wetty.x.jsx.jp"
  rules:
  - backendRefs:
    - name: wetty
      port: 80
